--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <nav>
 
-      <div class="nav-box" id="nav-box-kategorier">
+      <div class="nav-box">
         <h3 class="nav-box-title">Kategorier<span class="nav-box-twist"></span></h3>
         <ul class="nav-box-list">
           <li class="nav-box-item"><a href="javascript:void(0)" class="nav-box-item-link">Lyftutrustning</a></li>
@@ -198,7 +198,6 @@
     var proto = function(_){
     
       var init = function(){
-        var test = document.querySelectorAll("#nav-box-kategorier");
         collapseEvent();
       };
 
